colour change, card update
changed background colour, updated card text colour, moved card image up, added card shadow

--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
   <h1 class="text-center text-colour:white" style="padding-bottom:50px">
     Our Courses</h1>
 </div>
-    <div class="card-deck" style="padding-bottom: 150px">
+    <div id="courses"   class="card-deck" style="padding-bottom: 150px">
       <div class="card align-items-center card text-center border border-dark">
           <div class="card-body border rounded-lg border-dark ">
-              <img src="scissors_level_1-removebg-preview.png" width="150px" height="150px" class="rounded-circle">
+              <img src="scissors_level_1-removebg-preview.png" width="150px" height="150px" class="rounded-circle icon">
           <h5 class="card-title">Level 1 - Total Beginner</h5>
           <p class="card-text">
               Never picked up a pair of clippers in your life? Thinking of starting 
@@ -143,7 +143,7 @@
       <div class="card align-items-center card text-center border border-dark">
            
           <div class="card-body border rounded-lg border-dark">
-              <img src="clippers_level_2-removebg-preview.png" width="150px" height="150px" class="rounded-circle">
+              <img  src="clippers_level_2-removebg-preview.png" width="150px" height="150px" class="rounded-circle">
             <h5 class="card-title">Level 2 - Hair dresser to Barber</h5>
             <p class="card-text">
                 Are you at college studying hair? Are you a hairdresser that 
