amended card images
changed card image height as the images were over lapping in mobile view

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       </div>
       <div class="card align-items-center card text-center" style="margin-right: 0px;">
         <div class="card-body border rounded-lg">
-            <img src="male-afro-512-removebg-preview.png" width="150px" height="150px" class="rounded-circle">
+            <img src="male-afro-512-removebg-preview.png" width="150px" height="150px" class="img-fluid rounded-circle">
           <h5 class="card-title">Level 4 Afro Barber Tech</h5>
           <p class="card-text">
             Don't stop there!! A master barber should be able to do 
